--- a/Externals/MagicFM.vcxproj
+++ b/Externals/MagicFM.vcxproj
@@ -25,6 +25,14 @@
       <Configuration>Mixed</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="Release_COC|Win32">
+      <Configuration>Release_COC</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release_COC|x64">
+      <Configuration>Release_COC</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
@@ -74,7 +82,19 @@
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'" Label="Configuration">
+    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <PlatformToolset>v141</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
+    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <PlatformToolset>v141</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -111,7 +131,15 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(SolutionDir)Common.props" />
   </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="$(SolutionDir)Common.props" />
+  </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="$(SolutionDir)Common.props" />
+  </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(SolutionDir)Common.props" />
   </ImportGroup>
@@ -161,10 +189,24 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|Win32'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>$(xrExternals)FreeMagic\Source\;$(xrExternals)FreeMagic\Source\Approximation2D;$(xrExternals)FreeMagic\Source\Approximation3D;$(xrExternals)FreeMagic\Source\Containment2D;$(xrExternals)FreeMagic\Source\Containment3D;$(xrExternals)FreeMagic\Source\Core;$(xrExternals)FreeMagic\Source\Core2D;$(xrExternals)FreeMagic\Source\Core3D;$(xrExternals)FreeMagic\Source\Curve2D;$(xrExternals)FreeMagic\Source\Curve3D;$(xrExternals)FreeMagic\Source\Distance2D;$(xrExternals)FreeMagic\Source\Distance3D;$(xrExternals)FreeMagic\Source\ImageAnalysis;$(xrExternals)FreeMagic\Source\Interpolation1D;$(xrExternals)FreeMagic\Source\Interpolation2D;$(xrExternals)FreeMagic\Source\Interpolation3D;$(xrExternals)FreeMagic\Source\Intersection2D;$(xrExternals)FreeMagic\Source\Intersection3D;$(xrExternals)FreeMagic\Source\Numerics;$(xrExternals)FreeMagic\Source\Projection;$(xrExternals)FreeMagic\Source\Surface;$(xrExternals)FreeMagic\Source\Tessellation2D;$(xrExternals)FreeMagic\Source\Tessellation3D;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <DebugInformationFormat>None</DebugInformationFormat>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <AdditionalIncludeDirectories>$(xrExternals)FreeMagic\Source\;$(xrExternals)FreeMagic\Source\Approximation2D;$(xrExternals)FreeMagic\Source\Approximation3D;$(xrExternals)FreeMagic\Source\Containment2D;$(xrExternals)FreeMagic\Source\Containment3D;$(xrExternals)FreeMagic\Source\Core;$(xrExternals)FreeMagic\Source\Core2D;$(xrExternals)FreeMagic\Source\Core3D;$(xrExternals)FreeMagic\Source\Curve2D;$(xrExternals)FreeMagic\Source\Curve3D;$(xrExternals)FreeMagic\Source\Distance2D;$(xrExternals)FreeMagic\Source\Distance3D;$(xrExternals)FreeMagic\Source\ImageAnalysis;$(xrExternals)FreeMagic\Source\Interpolation1D;$(xrExternals)FreeMagic\Source\Interpolation2D;$(xrExternals)FreeMagic\Source\Interpolation3D;$(xrExternals)FreeMagic\Source\Intersection2D;$(xrExternals)FreeMagic\Source\Intersection3D;$(xrExternals)FreeMagic\Source\Numerics;$(xrExternals)FreeMagic\Source\Projection;$(xrExternals)FreeMagic\Source\Surface;$(xrExternals)FreeMagic\Source\Tessellation2D;$(xrExternals)FreeMagic\Source\Tessellation3D;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release_COC|x64'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>$(xrExternals)FreeMagic\Source\;$(xrExternals)FreeMagic\Source\Approximation2D;$(xrExternals)FreeMagic\Source\Approximation3D;$(xrExternals)FreeMagic\Source\Containment2D;$(xrExternals)FreeMagic\Source\Containment3D;$(xrExternals)FreeMagic\Source\Core;$(xrExternals)FreeMagic\Source\Core2D;$(xrExternals)FreeMagic\Source\Core3D;$(xrExternals)FreeMagic\Source\Curve2D;$(xrExternals)FreeMagic\Source\Curve3D;$(xrExternals)FreeMagic\Source\Distance2D;$(xrExternals)FreeMagic\Source\Distance3D;$(xrExternals)FreeMagic\Source\ImageAnalysis;$(xrExternals)FreeMagic\Source\Interpolation1D;$(xrExternals)FreeMagic\Source\Interpolation2D;$(xrExternals)FreeMagic\Source\Interpolation3D;$(xrExternals)FreeMagic\Source\Intersection2D;$(xrExternals)FreeMagic\Source\Intersection3D;$(xrExternals)FreeMagic\Source\Numerics;$(xrExternals)FreeMagic\Source\Projection;$(xrExternals)FreeMagic\Source\Surface;$(xrExternals)FreeMagic\Source\Tessellation2D;$(xrExternals)FreeMagic\Source\Tessellation3D;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
